# sqlx-repo

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  index.html  tailwind.css
.github/workflows/: gh-pages.yml  tests.yml
assets/: sqlx-repo-ui-dxh2ab3fc4f22d644.js  sqlx-repo-ui-dxh44ac357119b84118.js  sqlx-repo-ui-dxh8b33f04555a6cfdc.js  sqlx-repo-ui-dxhaf66618d80259e3.js  sqlx-repo-ui-dxhe9e76a34a1692.js  sqlx-repo-ui-dxhf8fa7621976030b.js
macros/: Cargo.toml
macros/src/: lib.rs
repo_derive_macro/: Cargo.toml
repo_derive_macro/src/: lib.rs
repo_macro/: Cargo.toml
repo_macro/src/: lib.rs
sql-bridge/: Cargo.toml  Makefile
sql-bridge/src/: ast.rs  error.rs  lib.rs
sql-bridge/tests/: alter_table.rs  create_index.rs  create_table.rs  delete.rs  drop.rs  insert.rs  select.rs  update.rs
sql_bridge/: Cargo.toml
sql_bridge/src/: ast.rs  lib.rs
sql_bridge/tests/: alter_table.rs  create_index.rs  create_table.rs  delete.rs  drop.rs  insert.rs  select.rs  update.rs
sqlx-repo/: Cargo.toml
sqlx-repo-macros/: Cargo.toml
sqlx-repo-macros/src/: expand.rs  lib.rs  query.rs  validate.rs
sqlx-repo-ui/: .gitignore  Cargo.toml  Makefile  index.html  input.css  package-lock.json  package.json
sqlx-repo-ui/public/: tailwind.css
sqlx-repo-ui/src/: main.rs
sqlx-repo/examples/demo/: Cargo.toml
sqlx-repo/examples/demo/src/: main.rs
sqlx-repo/src/: ext.rs  lib.rs  migrator.rs
sqlx-repo/tests/: test_repo.rs  test_sqlite.rs
src/: lib.rs  migrator.rs
tests/: test_repo.rs
