[package]
name = "sqlx-db-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
repo_derive_macro = { path = "./repo_derive_macro" }
sea-query = "0.32.1"
sea-query-binder = { version = "0.7.0", features = ["with-uuid", "sqlx", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "chrono", "with-time", "with-json", "with-chrono"] }
serde_json = "1.0.137"
sqlx = "0.8.3"
url = "2.5.4"
uuid = "1.12.1"
