[package]
name = "sqlx-db-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
futures = "0.3.31"
macros = { path = "./macros" }
sea-query = "0.32.1"
sea-query-binder = { version = "0.7.0", features = ["with-uuid", "sqlx", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "chrono", "with-time", "with-json", "with-chrono", "runtime-tokio-rustls"] }
serde_json = "1.0.137"
sqlx = "0.8.3"
url = "2.5.4"
uuid = "1.12.1"

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
