[package]
name = "sqlx-db-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3"
macros = { path = "./macros" }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "json", "mysql", "postgres", "runtime-tokio", "runtime-tokio-rustls", "sqlite", "uuid"] }
url = "2"
uuid = "1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
