[package]
name = "sqlx-repo-macros"
version = "0.2.0"
edition = "2024"
license.workspace = true
authors.workspace = true
description = "sqlx-repo macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
sql-bridge = "0.2"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut", "visit"] }

[dev-dependencies]
prettyplease = "0.2.33"
