[package]
name = "sqlx-repo-ui"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-free-icons = { version = "0.10", features = ["bootstrap"] }
hex = { version = "0.4.3" }
sql-bridge = { path = "../sql-bridge" }
dioxus-logger = "0.7"
