[package]
name = "sqlx-repo-ui"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
sql-bridge = { path = "../sql-bridge" }
dioxus-logger = "0.7"
flate2 = "1"
base64 = "0.22"
url = "2.5"
web-sys = { version = "0.3.77", features = [
    "Navigator",
    "Window",
    "Clipboard",
] }
gloo-timers = "0.3"
