[package]
name = "sqlx-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
sqlx-repo-macros = { path = "../sqlx-repo-macros" }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "chrono",
    "json",
    "mysql",
    "postgres",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
anyhow = "1.0.98"
tempfile = "3.20.0"
tokio = { version = "1.44", features = ["full"] }
