[package]
name = "sqlx-repo"
version = "0.1.2"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "repository pattern on top of sqlx"
readme.workspace = true
keywords = ["sqlx", "repository"]
repository = "https://github.com/vidicas/sqlx-repo"

[dependencies]
futures = "0.3"
sqlx-repo-macros = "0.1"
serde_json = "1"
sqlx = { version = "0.8", features = [
    "chrono",
    "json",
    "mysql",
    "postgres",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
anyhow = "1.0.98"
tempfile = "3.20.0"
tokio = { version = "1.44", features = ["full"] }
